--- a/住房公积金 Housing Fund.ipynb
+++ b/住房公积金 Housing Fund.ipynb
@@ -2,33 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (0.23.0)\n",
-      "Requirement already satisfied: pytz>=2011k in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pandas) (2018.4)\n",
-      "Requirement already satisfied: numpy>=1.9.0 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pandas) (1.17.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from pandas) (2.7.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from python-dateutil>=2.5.0->pandas) (1.11.0)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.7.1 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (1.17.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (2.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (2.7.3)\n",
-      "Requirement already satisfied: pytz in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (2018.4)\n",
-      "Requirement already satisfied: six>=1.10 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (1.11.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from matplotlib) (1.0.1)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\liul5\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from kiwisolver>=1.0.1->matplotlib) (39.1.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pandas\n",
-    "!pip install matplotlib\n",
+    "#!pip install pandas\n",
+    "#!pip install matplotlib\n",
     "from helper import *\n",
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
@@ -40,7 +19,8 @@
     "import ipywidgets as widgets\n",
     "pandas.set_option('display.max_columns', None)\n",
     "pandas.set_option('display.max_rows', None)\n",
-    "plt.rcParams['font.family'] = 'Dejavu Sans' "
+    "#plt.rcParams['font.family'] = 'SimHei'\n",
+    "plt.rcParams['axes.unicode_minus']=False"
    ]
   },
   {
@@ -63,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30f1885c7e63486dbbb506e619d0d901",
+       "model_id": "5fc6bf5d3a7f49be97b687c08bb30e61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3149,7 +3129,7 @@
        "240  20  12  3403  3393     9   3764     0       0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3167,7 +3147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3185,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6108,7 +6088,7 @@
        "240  20  12  2835  2828     7   2236   599       0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6126,13 +6106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5464c908f0c47b3b77d94e969104923",
+       "model_id": "06dcfe9e54fb4c91b447aaf2ce4501a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6149,7 +6129,7 @@
        "<function helper.fixpayment(loan, year, rate, enter)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6178,7 +6158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74b9840b6a874fe8a9495809fc6099b4",
+       "model_id": "98c850705ad0442a881a83ba0913c502",
        "version_major": 2,
        "version_minor": 0
       },
@@ -9665,7 +9645,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07f62fe353d744c8aa162ebb4727b123",
+       "model_id": "cf86d4df483141b0933c60523be3efac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -9712,7 +9692,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abbe65cac2f9405f9ac261efe31cad20",
+       "model_id": "cc7e7203b77c4b16992274507df69aea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -9742,6 +9722,27 @@
     "         year=widgets.IntSlider(value=20,min=0,max=30,step=1,description='贷款年限:'),\n",
     "         male_input=widgets.FloatText(value=male_input,description='男缴金:',disabled=True),\n",
     "         female_input=widgets.FloatText(value=female_input,description='女缴金:',disabled=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\liul5\\\\.matplotlib'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib\n",
+    "matplotlib.get_configdir()"
    ]
   },
   {
